fix header position on small screen

--- a/src/components/Book Carousel/bookcarousel.css
+++ b/src/components/Book Carousel/bookcarousel.css
@@ -48,5 +48,5 @@
 }
 
 .slick-track {
-  text-align: center
+  text-align: center;
 }
